# laboratorio-openmp-pmi

./: Cargo.toml  Exposición RUST.odp  README.md
src/: main.rs  main.rs.bk  main.rs.bk2  main.rs.bk3_prometedor  main.rs.funciona_pero_sin_indice
